# AnonymousMailTelegramBot

./: .env.template  .pre-commit-config.yaml  README.md  pyproject.toml
data/locales/: en.ftl
resources/locales/: en.ftl
src/: main.py
src/bot/: __init__.py  bot.py
src/bot/handlers/: __init__.py  user.py
src/bot/languages/: __init__.py  translator.py
src/bot/middlewares/: __init__.py
src/bot/middlewares/outer/: __init__.py  throttling.py  translator.py
src/core/: __init__.py  logger.py  logger_config.py  project_settings.py
src/services/: __init__.py
src/services/mail/: __init__.py  mail_requests.py  models.py
src/storages/: __init__.py
src/storages/redis_tools/: __init__.py  tools.py
