[tool.poetry]
name = "anonymousmailtelegrambot"
version = "0.1.0"
description = ""
authors = ["FranChesKo <dev.franchesko@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
aiogram = "3.3.0"
aiohttp = "3.9.3"
pydantic = "2.5.3"
pydantic-settings = "2.1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "24.2.0"
Flake8-pyproject = "1.2.3"
isort = "5.13.2"
mypy = "1.8.0"
pre-commit = "3.6.1"
pytest = "8.0.0"
pytest-aiohttp = "1.0.5"
pytest-asyncio = "0.23.5"

[tool.black]
line-length = 90
target-version = ["py312"]

[tool.isort]
profile = "black"
py_version = 312
line_length = 90
length_sort = true
multi_line_output = 3
include_trailing_comma = true
src_paths = ["src", "tests"]
extend_skip = ["__init__.py"]

[tool.flake8]
max-line-length = 90
count = true

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
explicit_package_bases = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
